--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ requests
 PyPDF2
 transformers
 torch
+google-generativeai>=0.7.2
+langchain-google-genai 
+faiss-cpu 
+langchain
+langchain-community
+sentence_transformers
